projects/compiler/test/typechecker/binary/lte_error.2.out
Error at %FILE_NAME%:1:7
Illegal operator
  |  "abc" <= "def"
           ^
No operator '<=' exists between types String and String
